@@ -1,0 +1,6 @@
+;;
+;; Note: this file is used in tests that rely on line numbers
+;;
+(ns ^:mranderson/inlined metagetta-test.test-ns1.mranderson-inlined-ns)
+
+(defn an-inlined-var[a] a)
